src/test/ui/unreachable/unreachable-loop-patterns.stderr
error: unreachable pattern
  --> $DIR/unreachable-loop-patterns.rs:20:9
   |
LL |     for _ in unimplemented!() as Void {}
   |         ^
   |
note: lint level defined here
  --> $DIR/unreachable-loop-patterns.rs:7:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

